removed unnecessary opens